@@ -25,7 +25,7 @@ javafx {
 }
 
 gluonfx {
-    compilerArgs += ['-H:+ForeignAPISupport']
+    compilerArgs += ['-H:+ForeignAPISupport', '--enable-native-access=ALL-UNNAMED']
 }
 
 application {
